handle supportingInfo as another case.